src/App.less
/* ... */
@media (min-width: 319px) and (max-width: 790px) {
  .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu {
    margin-left: 10px;
  }

  .lower-header-box .city-name-box-small-screen .icon {
    display: none;
  }

  .lower-header-box .show-map-button {
    margin-top: -6%;
    margin-left: 4%;
    margin: 10px 0 5px 10px;
  }

  .city-name-box {
	margin-top: -20px;
  }

  .header .nav-menu {
    width: 10px;
  }

  .header .city .icon {
    font-size: 1.1em;
  }

  .lower-header-box .city-name {
    font-size: 21px;
    margin-left: -31px;
  }

  .lower-header-box {
    display: inline-table;
    align-items: flex-end;
  }

  .search {
    font-size: 14px;
    line-height: 24px;
    padding-left: 11px;
  }

  .search .ant-select-show-search.ant-select:not(.ant-select-customize-input) .ant-select-selector {
    margin-left: 1% !important;
  }

  .search{
    margin-left: -10px;
    padding-left: 20px;
  }
}

@media (max-width: 500px) {
  .city-name-box {
      display: flex;
      align-items: flex-start;
      flex-direction: column;
  }
}

.ant-checkbox-group {
  display: block !important;
}

.show-map-button:focus{
  color: #fa8c16 !important;
}

.show-map-button:hover{
  color: #fff !important;
}

.ant-menu-item a {
  color: #000;
}

.challenge-text {
  color: #fff;
}

.challenge-text:hover {
  color: #fff;
}

//needs to be changed when antd team will add token to change color of subItem text
:where(.css-dev-only-do-not-override-50es5f).ant-menu .ant-menu-item .ant-menu-item-icon, :where(.css-dev-only-do-not-override-50es5f).ant-menu .ant-menu-submenu-title .ant-menu-item-icon{
  color: #fff;
}

